--- a/resources/css/zinq.css
+++ b/resources/css/zinq.css
@@ -337,39 +337,6 @@ h4, .h4 {
 }
 
 
-.zinq-checkbox {
-    @apply transition-all duration-200;
-    @apply w-6 h-6 flex items-center justify-center rounded;
-    @apply zinq-focus;
-    /* background */
-    @apply bg-white dark:bg-(color:--gray-800);
-    /* border */
-    @apply border border-zinc-300 dark:border-zinc-700;
-
-    &.zinq-checkbox-checked {
-        @apply border-white dark:border-(color:--primary);
-        @apply bg-(color:--primary) dark:bg-(color:--primary-darker);
-    }
-
-    &.sm {
-        @apply w-5 h-5;
-    }
-    &.lg {
-        @apply w-7 h-7;
-    }
-
-    &.zinq-checkbox-error {
-        @apply border-red-700;
-    }
-}
-
-.zinq-checkbox-label {
-    @apply text-base;
-}
-
-.zinq-checkbox-tick {
-    @apply absolute size-4 text-white dark:text-(color:--gray-800);
-}
 
 .zinq-toggle {
     @apply relative inline-flex h-6 w-11 shrink-0 cursor-pointer rounded-full transition-colors duration-200 ease-in-out;
@@ -463,7 +430,7 @@ h4, .h4 {
 }
 
 .zinq-field:not(.zinq-field-split) {
-    .zinq-label:not(.zinq-radio-label):not(.zinq-checkbox-label) {
+    .zinq-label:not(.zinq-radio-label) {
         @apply mb-1.5;
     }
 }
